--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "googleapis": "^32.0.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.3.1",
+    "urlsafe-base64": "^1.0.0"
   }
 }
