--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "googleapis": "^32.0.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "mersenne-twister": "^1.1.0",
+    "minizip-asm.js": "^1.0.10",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "urlsafe-base64": "^1.0.0"
